examples/policies/gatekeeper/tests/objects/upgrade-to-1-36.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upgrade-to-1-36
  namespace: default
  annotations:
    upgradescope.basit.engineer/upgrade-target: "1.36"
spec:
  replicas: 1
  selector:
    matchLabels: {app: upgrade-runner}
  template:
    metadata:
      labels: {app: upgrade-runner}
    spec:
      containers:
        - name: runner
          image: registry.example/upgrade-runner:1
